fix alignment for sharing cart list items

--- a/scss/post.scss
+++ b/scss/post.scss
@@ -300,3 +300,6 @@ body.path-mod h2 img.iconlarge {
 	display: block;
 }
 
+.block_sharing_cart li {
+	text-align: left;
+}
